# NTU_perception_discussion

./: .gitignore  README.md
doc/: Reconstruction.md  VSLAM.md  git.md  learn.md  miscellaneous.md
programs/c1_helloSLAM/: CMakeLists.txt  README.md  hello.py  libHelloSLAM.cpp  libHelloSLAM.h  useHello.cpp
programs/c2_learnEigen/: README.md  np_basic_create.py
programs/c2_learnEigen/useEigen/: CMakeLists.txt  eigenMatrix.cpp
programs/c2_learnEigen/useGeometry/: CMakeLists.txt  eigenGeometry.cpp
programs/c3_mapping_simple/: .gitignore  CMakeLists.txt  README.md  octomap.bt  octomap_mapping.cpp  pointcloud_mapping.cpp
programs/c3_mapping_simple/script/: bag_2_txt.py
programs/c4_opencv_basic/: CMakeLists.txt  imageBasics  imageBasics.cpp
references/VSLAM/: .~QE_Handuo.pptx  README.md
